Temporary fix article hover
Fixed the article hover bug where the transform caused by perspective view was too big due to the size of the perspective element (Articles).

- Transform from rotateX(2deg) and translateZ(14px) to scale(1.05).

--- a/Assets/Stylesheets/stylesheet.css
+++ b/Assets/Stylesheets/stylesheet.css
@@ -198,7 +198,7 @@ a.active * {
     }
 
     section#Articles > article:hover {
-        transform: rotateX(2deg) translateZ(14px);
+        transform: scale(1.05);
     }
 
     section#Articles > article::after {
